--- a/css/style.css
+++ b/css/style.css
@@ -4434,7 +4434,7 @@ html [class*='section-'].section-bottom-0 {
 	}
 }
 
-.section-main-bunner:after {
+/* .section-main-bunner:after {
 	content: '';
 	z-index: 10;
 	position: absolute;
@@ -4443,7 +4443,7 @@ html [class*='section-'].section-bottom-0 {
 	bottom: -2px;
 	height: 66px;
 	background-image: url("../images/decor-wave-bottom.png");
-}
+} */
 
 .section-main-bunner .main-bunner-title {
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
